@@ -1,3 +1,4 @@
+* Manage domains on Action Window
 * Use range for Date/Time fields in filter box
 * Allow multi-selection for Selection field in filter box
 
